Added App Icon and launch image

--- a/Charts-SwiftUI/Info.plist
+++ b/Charts-SwiftUI/Info.plist
@@ -28,7 +28,10 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchScreen</key>
-	<dict/>
+	<dict>
+		<key>UIImageName</key>
+		<string>CTLogo</string>
+	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
